# django-application-template

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  webpack.config.js
.github/actions/check-formatting/: action.yml
.github/actions/node-tests/: action.yml
.github/actions/python-tests/: action.yml
.github/workflows/: branch-cleanup.yml  cd.yml  pr.yml  remove-untagged.yml
app/: __init__.py
app/healthcheck/: urls.py
app/lib/: api.py  context_processor.py  template_filters.py
app/main/: urls.py  views.py
app/templates/: base.html
app/templates/main/: cookies.html  index.html
config/: jinja2.py  urls.py
config/settings/: base.py  develop.py  features.py  production.py  staging.py  test.py
src/scripts/: main.js
test/main/: test_routes.py
